--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "startDev": "nodemon index.js"
+    "startDev": "nodemon index.js",
+    "start": "node index.js",
   },
   "author": "Sangamesh",
   "license": "ISC",
